# palantir

./: .gitignore  CMakeLists.txt  config.yml  palantir.sh
src/: Constants.h  Default.h  Palantir.cpp  Palantir.h  SDLFailure.h  main.cpp
src/framework/: Constants.h  Framework.h  Libs.h
src/gizmo/: RGBColor.h  Tchotchke.cpp  Tchotchke.h
src/percipient/: CosmographerPercipient.cpp  CosmographerPercipient.h
